Added sculk chamber block

--- a/src/main/resources/assets/redstoneoverpower/lang/en_us.json
+++ b/src/main/resources/assets/redstoneoverpower/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"block.redstoneoverpower.logical_comparator": "Logical comparator",
+	"block.redstoneoverpower.sculk_chamber": "Sculk chamber",
 	"block.redstoneoverpower.copper_hopper": "Copper hoppper",
 	"block.redstoneoverpower.waxed_copper_hopper": "Waxed copper hoppper",
 	"block.redstoneoverpower.exposed_copper_hopper": "Exposed copper hoppper",
