--- a/src/main/resources/assets/redstoneoverpower/lang/es_es.json
+++ b/src/main/resources/assets/redstoneoverpower/lang/es_es.json
@@ -1,5 +1,6 @@
 {
     "block.redstoneoverpower.logical_comparator": "Comparador lógico",
+    "block.redstoneoverpower.sculk_chamber": "Cámara de sculk",
     "block.redstoneoverpower.copper_hopper": "Tolva de cobre",
     "block.redstoneoverpower.waxed_copper_hopper": "Tolva de cobre encerada",
     "block.redstoneoverpower.exposed_copper_hopper": "Tolva de cobre expuesta",
