Added Sculk note block

--- a/src/main/resources/assets/redstoneoverpower/lang/en_us.json
+++ b/src/main/resources/assets/redstoneoverpower/lang/en_us.json
@@ -1,6 +1,7 @@
 {
 	"block.redstoneoverpower.logical_comparator": "Logical comparator",
 	"block.redstoneoverpower.sculk_chamber": "Sculk chamber",
+	"block.redstoneoverpower.sculk_note_block": "Sculk note block",
 	"block.redstoneoverpower.copper_hopper": "Copper hoppper",
 	"block.redstoneoverpower.waxed_copper_hopper": "Waxed copper hoppper",
 	"block.redstoneoverpower.exposed_copper_hopper": "Exposed copper hoppper",
