--- a/src/main/resources/assets/redstoneoverpower/lang/en_us.json
+++ b/src/main/resources/assets/redstoneoverpower/lang/en_us.json
@@ -10,5 +10,7 @@
 	"block.redstoneoverpower.weathered_copper_hopper": "Weathered copper hoppper",
 	"block.redstoneoverpower.waxed_weathered_copper_hopper": "Waxed weathered copper hoppper",
 	"block.redstoneoverpower.oxidized_copper_hopper": "Oxidized copper hoppper",
-	"block.redstoneoverpower.waxed_oxidized_copper_hopper": "Waxed oxidized copper hoppper"
+	"block.redstoneoverpower.waxed_oxidized_copper_hopper": "Waxed oxidized copper hoppper",
+	"block.redstoneoverpower.duct": "Duct",
+	"container.redstoneoverpower.duct": "Duct item"
 }
